[package]
name = "tui-input"
version = "0.11.1"
edition = "2021"
authors = ["Arijit Basu <hi@arijitbasu.in>"]
description = "TUI input library supporting multiple backends"
keywords = ["tui", "terminal", "input"]
repository = "https://github.com/sayanarijit/tui-input"
readme = "README.md"
license = "MIT"
autoexamples = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]
crossterm = ["dep:ratatui"]
serde = ["dep:serde"]
termion = ["dep:termion"]

[dependencies]
ratatui = { version = "0.29", optional = true }
serde = { version = "1.0.218", optional = true, features = ["derive"] }
termion = { version = "4.0.4", optional = true }
unicode-width = "0.2.0"

[dev-dependencies]
crossterm = { version = "0.28.1" }

[[example]]
name = "crossterm_input"
required-features = ["crossterm"]

[[example]]
name = "termion_input"
required-features = ["termion"]

[[example]]
name = "ratatui_input"
required-features = ["crossterm"]
