[package]
name = "tui-input"
version = "0.14.0"
edition = "2021"
authors = ["Arijit Basu <hi@arijitbasu.in>"]
description = "TUI input library supporting multiple backends"
keywords = ["tui", "terminal", "input"]
repository = "https://github.com/sayanarijit/tui-input"
readme = "README.md"
license = "MIT"
autoexamples = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ratatui-crossterm"]
ratatui-crossterm = ["ratatui/crossterm"]
ratatui-termion = ["ratatui/termion"]

[dependencies]
unicode-width = "0.2.0"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
crossterm = { version = "0.29.0", optional = true }
termion = { version = "4.0.5", optional = true }
ratatui = { version = "0.29.0", optional = true, features = ["crossterm"] }

[dev-dependencies]

[[example]]
name = "crossterm_input"
required-features = ["crossterm"]

[[example]]
name = "termion_input"
required-features = ["termion"]

[[example]]
name = "ratatui_crossterm_input"
required-features = ["ratatui-crossterm"]
