[package]
name = "ratatui-input"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.21.0", features = ["crossterm"] }
tui-input = { path = "../../" }
unicode-width = "0.1.10"
