[package]
name = "ratatui-input"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
tui = { package = "ratatui", git = "https://github.com/a-kenji/ratatui", branch = "update/crossterm", features = ["crossterm"] }
tui-input = { path = "../../" }
unicode-width = "0.1.10"
