[package]
name = "tui-rs-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
tui = { version = "0.18.0", features = ["crossterm"] }
tui-input = { path = "../../" }
unicode-width = "0.1.9"
